required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (5.3-dev, SVN trunk):
------------------------------------
- fix some integer rounding errors in the agg line offseter (#2659)

- fix a bug with shapes with duplicate end points. was causing nans
  in the angle follow placement code (#2695)

- refactor msGetLabelSizeEx (now merged with msGetLabelSize) (#2390)

- native label size computation for AGG when using angle follow (#2357)

- memory leak in msInsertLayer, from Ned Harding (#2784)

- label size computation refactoring (#2390)

- don't draw label background if we're using angle follow. (#2726)

- legend keyimage resampling with agg (#2715)

- tileindexed rasters when DATA is manipulated via mapscript work (#2783)

- styleObj width now supports attribute binding

- RFC40 implementation: label text wrapping and alignment (#2383)

- baseline adjustment for multiline labels (#1449)

- Added support to access to the labelObj OUTLINEWIDTH property in 
  PHP/MapScript 

- PHP paste image should also work with AGG (#2682)

- Fixed bug when QUERYMAP hilite color is set and the shape's color in a
  layer is from a data source (#2769)

- Decoupled AUTO label placement from the positions enum in mapserver.h. Added 
  explicit case for POLYGON layers where CC is the default and then we try UC, 
  LC, CL and CR. (#2770)

- Changed base type of styleObj size and width from int to double (#2766)

- Correct allocation error in mapmssql2008.c

- Add possibility  to use a full resolution setting for svg output (#1706)

- Fixed GetFeature through tileindex bug: the tileindex of the shape found 
  wasn't set properly in the resultcache object. (#2359)
